--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [cities[3]['Area'], cities[1]['City'], cities[2]['City']], 'y': [], 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [cities[3]['CIty'], cities[4]['City'], cities[5]['City']], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
   },
