Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [[cities[3]['CIty'], cities[4]['City'], cities[5]['City']], 'y': [[cities[3]['Area'], cities[4]['Area'], cities[5]['Area']], 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [[cities[3]['CIty'], cities[4]['City'], cities[5]['City']], 'y': [[cities[3]['Area'], cities[4]['Area'], cities[5]['Area']], 'text': [\"Marakesh\", \"Albuquerque\"]}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
   },
