--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -394,9 +394,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-bbb27d42ce20>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-bbb27d42ce20>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    bar_trace_first_three_areas = {'type': 'scatter', 'x': [cities[0]['City'], cities[1]['City'], cities[2]['City']], 'y': [[cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [\"Buenos Aires\", \"Toronto\", \"Peyonchang\"]}\u001b[0m\n\u001b[0m                                                                                                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [cities[0]['City'], cities[1]['City'], cities[2]['City']], 'y': [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']], 'text': [\"Buenos Aires\", \"Toronto\", \"Peyonchang\"]}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [cities[0]['City'], cities[1]['City'], cities[2]['City']], 'y': [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']], 'text': [\"Buenos Aires\", \"Toronto\", \"Peyonchang\"]}"
@@ -404,63 +413,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Peyonchang"
-         ],
-         "type": "scatter",
-         "uid": "dfda660c-8e4a-11e9-8f8a-9b8bd64a5433",
-         "x": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
-         ],
-         "y": [
-          2891000,
-          2800000,
-          2581000
-         ]
-        },
-        {
-         "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Peyonchang"
-         ],
-         "type": "scatter",
-         "uid": "dfda680a-8e4a-11e9-8f8a-9b8bd64a5433",
-         "x": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
-         ],
-         "y": [
-          4758,
-          2731571,
-          3194
-         ]
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"59ebddf7-d3cb-45c3-b6c7-e2ca5f118f7c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"59ebddf7-d3cb-45c3-b6c7-e2ca5f118f7c\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Peyonchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"dfde6b12-8e4a-11e9-8f8a-9b8bd64a5433\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Peyonchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"scatter\", \"uid\": \"dfde6cf2-8e4a-11e9-8f8a-9b8bd64a5433\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"59ebddf7-d3cb-45c3-b6c7-e2ca5f118f7c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"59ebddf7-d3cb-45c3-b6c7-e2ca5f118f7c\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Peyonchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"dfde6b12-8e4a-11e9-8f8a-9b8bd64a5433\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Peyonchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"scatter\", \"uid\": \"dfde6cf2-8e4a-11e9-8f8a-9b8bd64a5433\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'bar_trace_first_three_areas' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-8a278bc4c202>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moffline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mbar_trace_first_three_pops\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbar_trace_first_three_areas\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'bar_trace_first_three_areas' is not defined"
+     ]
     }
    ],
    "source": [
